# Rust-Microservice

./: Cargo.toml  README.md  samconfig.toml  template.yaml  test-event.json
.aws-sam/: build.toml
src/: main.rs
