[package]
name = "dynamodb_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.10.0"
lambda_runtime = "0.9.2"
serde = "1.0.136"
serde_json = "1.0.78"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.16.1"
aws-sdk-xray = "1.15.0"
rand = "0.8.4"
simple_logger = "1.16.0"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.44"

